add dry option to prettier

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -24,3 +24,4 @@ jobs:
         same_commit: true # optional
         # Options for the `prettier` command
         prettier_options: "--write **/**/*.ts" # optional, default is --write **/*.js
+        dry: true
