--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
     "@types/mysql": "^2.15.15",
+    "@types/node-schedule": "^1.3.1",
     "chainfetch": "^1.2.2",
     "clear-module": "^4.1.1",
     "eris": "github:turret-studios/eris",
     "eris-sharder": "^1.10.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^1.3.2",
     "seedrandom": "^3.0.5"
   }
 }
