--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/node-schedule": "^1.3.1",
     "chainfetch": "^1.2.2",
     "clear-module": "^4.1.1",
-    "eris": "github:turret-studios/eris",
+    "eris": "^0.14.0",
     "eris-sharder": "^1.10.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
